2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Bump version for next release cycle.

	* configure.ac (AC_INIT): Bump version suffix to alpha-2.

2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.1-mingw32-alpha-1 released.

2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare initial package release.

	* README: New file; use it to source release notes.

	* Makefile.in (SRCDIST_FILES): Use ...
	(LICENCE_FILES): ...this new macro; define it.
	(licdist): New build goal; implement it.
	(bindist): Require it; add alternative `zip' format package.

	* src/profile (repository): Set default `package-index' name.
	(system-map): Normalise spelling for default `sysroot' path names.

2010-02-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add directory/file records in installation manifests.

	* src/pkgkeys.h (dirname_key, filename_key): New strings; declare...
	* src/pkgkeys.c (dirname_key, filename_key): ...and implement them.

	* src/pkgproc.h (pkgArchiveProcessor::installed): New class member
	variable; declare it.
	(pkgTarArchiveInstaller::UpdateInstallationManifest): New method;
	declare it.

	* src/tarproc.cpp: Miscellaneous comment updates.
	(pkgTarArchiveInstaller): In constructor...
	(pkgTarArchiveInstaller::installed): ...use new member variable...
	(pkgArchiveProcessor::installed): ...inherited from this.
	(pkgTarArchiveInstaller::UpdateInstallationManifest): Implement and...
	(pkgTarArchiveInstaller::ProcessDataStream): ...use it.
	(pkgTarArchiveInstaller::ProcessDirectory): Likewise.

2010-02-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around a deficiency in Microsoft's stat() implementation.

	* src/tarproc.cpp (pkgTarArchiveProcessor::ProcessDirectory): Don't
	pass a `pathname' argument with trailing slashes; strip them off.

2010-02-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add machinery for installation and packaging for distribution.
